_sass/_style.scss
/* ... */
@media (max-width: 767px) {
  .main-header-logo {
    width: 220px;
    height: 55px;
  }

  .img-floating-tab-loney {
    left: 16px;
    top: 175px;
    width: 320px;
  }

  .img-floating-tab-ranking {
    right: -34px;
    top: 0px;
    width: 250px;
  }

  .img-floating-tab-severity {
    right: 4px;
    top: 194px;
    width: 180px;
  }

  .img-floating-tab-right {
    right: 138px;
  }

  .section-hero .img-hero-laptop {
    width: 600px;
  }

  .section-community-professionals .row-cols-1::before {
    top: 50%;
    width: 75%;
    height: 1px;
  }

  .section-latest-news .card-post-latest .post-feature-image-wrapper {
    flex-basis: 100%;
    width: 100%;
  }
}

@media (max-width: 575px) {
  .main-header-logo {
    width: 180px;
    height: 45px;
  }

  .img-floating-tab-loney {
    left: 7px;
    top: 154px;
    width: 280px;
  }

  .img-floating-tab-ranking {
    right: -20px;
    top: -2px;
    width: 220px;
  }

  .img-floating-tab-severity {
    right: 22px;
    top: 160px;
    width: 160px;
  }

  .img-floating-tab-left {
    left: 12px;
    top: 157px;
    width: 96px;
  }

  .img-floating-tab-right {
    top: 132px;
    right: unset;
    left: 228px;
    width: 90px;
  }

  .section-hero .img-hero-laptop {
    width: 500px;
  }

  .section-about-the-platform .img-laptop-binary {
    width: 400px;
  }

  .section-latest-news .card-post .card-body {
    padding: 20px 0;
  }

  .section-latest-news .card-post-latest .card-body {
    padding: 15px 30px 20px 30px;
  }

  .swiper-testimonials .profile-image-wrapper {
    width: 100%;
  }
}

@media (width: 575px) {
  .img-floating-tab-loney {
    left: 4px;
    top: 180px;
    width: 380px;
  }

  .img-floating-tab-severity {
    right: 0;
    top: 200px;
    width: 200px;
  }

  .img-floating-tab-ranking {
    right: -58px;
    top: -28px;
    width: 290px;
  }

  .section-hero .img-hero-laptop {
    width: 640px;
  }
}

@media (max-width: 460px) {
  .img-floating-tab-loney {
    left: 7px;
    top: 140px;
    width: 240px;
  }

  .img-floating-tab-ranking {
    right: -20px;
    top: -6px;
    width: 200px;
  }

  .img-floating-tab-severity {
    right: 6px;
    top: 146px;
    width: 140px;
  }

  .section-hero .img-hero-laptop {
    width: 440px;
  }

  .section-testimonials > .container,
  .section-our-team > .container {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (max-width: 375px) {
  .main-header-logo {
    width: 160px;
    height: auto;
  }

  .img-floating-tab-ranking {
    right: -58px;
  }

  .img-floating-tab-severity {
    right: -32px;
    top: 146px;
  }

  .img-floating-tab-left {
    left: 10px;
    top: 142px;
    width: 86px;
  }

  .img-floating-tab-right {
    top: 120px;
    left: 200px;
    width: 80px;
  }

  .section-about-the-platform .img-laptop-binary {
    width: 100%;
  }
}

@media (max-width: 360px) {
  .main-header-logo {
    width: 120px;
  }

  .img-floating-tab-left {
    left: 10px;
    top: 124px;
    width: 70px;
  }

  .img-floating-tab-right {
    top: 112px;
    left: 170px;
    width: 60px;
  }
}

#news-roll {
  justify-content: center;
  margin-bottom: 1em;
}

#news-page-title {
  margin: 1em 0 1em 2em;
}

.news-card {
  border: none;
  max-width: 30vw;
  max-height: 30vw;
  .post-feature-image-wrapper {
    max-width: 100%;
    max-height: 20vw;
  }
}

@media (max-width: 1200px) {
  .card-body > p {
    display: none;
  }
}

#archive-list {
  margin: 2em;
}

.archive-date {
  font-weight: bold;
}

.archive-title {
  margin-bottom: 1em;
}

#post-hero {
  background-position: 100% center;
  background-size: cover;
  border-radius: 30px;
  height: 35vh;
  margin-bottom: 2em;
  @media (max-width: 900px) {
    display: none;
  }
}

#page-not-found {
  margin: 10px auto;
  max-width: 600px;
  text-align: center;

  h1 {
    margin: 30px 0;
    font-size: 4em;
    line-height: 1;
    letter-spacing: -1px;
  }
}

#tag-list {
  color: darkcyan;
  margin-top: -1em;
}

